@@ -7,35 +7,122 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.BiConsumer;
-import java.util.stream.Collectors;
 
 import io.openems.common.exceptions.OpenemsException;
 import io.openems.edge.core.host.Inet4AddressWithSubnetmask;
 import io.openems.edge.core.host.NetworkInterface.IpMasqueradeSetting;
+import io.openems.edge.core.host.Routes;
 
 public class InterfaceConfiguration {
 
 	/**
-	 * e. g. eth0.
+	 * The name of the network interface, e.g. {@code eth0}.
 	 */
 	public final String interfaceName;
 
 	/**
-	 * The required ip's on the interface.
+	 * The required IP addresses on the interface.
 	 */
 	private final List<Inet4AddressWithSubnetmask> ips = new LinkedList<>();
 	private Boolean ipv4Forwarding;
 	private IpMasqueradeSetting ipMasquerade;
+
+	private Boolean dhcp;
+	private String dns;
+	private int dhcpRouteMetric;
+	private String gateway;
+	private Boolean gatewayOnLink;
+	private Boolean createIfNotExist;
+	private final List<Routes> routes = new LinkedList<>();
 
 	public InterfaceConfiguration(String interfaceName) {
 		this.interfaceName = interfaceName;
 	}
 
 	/**
-	 * Sets the IP-Masquerade setting.
-	 * 
+	 * Adds a route to this interface configuration.
+	 *
+	 * @param route the {@link Routes} object to add
+	 * @return this instance for method chaining
+	 */
+	public InterfaceConfiguration addRoute(Routes route) {
+		this.routes.add(route);
+		return this;
+	}
+
+	/**
+	 * Sets the DHCP configuration.
+	 *
+	 * @param dhcp {@code true} to enable DHCP, {@code false} to disable
+	 * @return this instance for method chaining
+	 */
+	public InterfaceConfiguration setDhcp(Boolean dhcp) {
+		this.dhcp = dhcp;
+		return this;
+	}
+
+	/**
+	 * Sets the DNS server address.
+	 *
+	 * @param dns the DNS server address
+	 * @return this instance for method chaining
+	 */
+	public InterfaceConfiguration setDns(String dns) {
+		this.dns = dns;
+		return this;
+	}
+
+	/**
+	 * Sets the DHCP route metric.
+	 *
+	 * @param dhcpRouteMetric the route metric value to use when DHCP is enabled
+	 * @return this instance for method chaining
+	 */
+	public InterfaceConfiguration setDhcpRouteMetric(int dhcpRouteMetric) {
+		this.dhcpRouteMetric = dhcpRouteMetric;
+		return this;
+	}
+
+	/**
+	 * Sets the default gateway.
+	 *
+	 * @param gateway the gateway IP address
+	 * @return this instance for method chaining
+	 */
+	public InterfaceConfiguration setGateway(String gateway) {
+		this.gateway = gateway;
+		return this;
+	}
+
+	/**
+	 * Sets whether the gateway is on-link.
+	 *
+	 * @param gatewayOnLink {@code true} if the gateway is on-link, {@code false}
+	 *                      otherwise
+	 * @return this instance for method chaining
+	 */
+	public InterfaceConfiguration setGatewayOnLink(Boolean gatewayOnLink) {
+		this.gatewayOnLink = gatewayOnLink;
+		return this;
+	}
+
+	/**
+	 * Creates an interface if the interface not exist.
+	 *
+	 * @param createIfNotExist {@code true} if the interface need to be created
+	 *                         {@code false} otherwise
+	 * @return this instance for method chaining
+	 */
+	public InterfaceConfiguration setCreateIfNotExist(Boolean createIfNotExist) {
+		this.createIfNotExist = createIfNotExist;
+		return this;
+	}
+
+	/**
+	 * Sets the IP masquerade setting.
+	 *
 	 * @param ipMasquerade the {@link IpMasqueradeSetting}
-	 * @return this
+	 * @return this instance for method chaining
 	 */
 	public InterfaceConfiguration setIpMasquerade(IpMasqueradeSetting ipMasquerade) {
 		this.ipMasquerade = ipMasquerade;
@@ -43,10 +130,11 @@ public class InterfaceConfiguration {
 	}
 
 	/**
-	 * Sets the IPv4 Forwarding.
-	 * 
-	 * @param ipv4Forwarding the setting
-	 * @return this
+	 * Sets the IPv4 forwarding setting.
+	 *
+	 * @param ipv4Forwarding {@code true} to enable IPv4 forwarding, {@code false}
+	 *                       to disable
+	 * @return this instance for method chaining
 	 */
 	public InterfaceConfiguration setIpv4Forwarding(Boolean ipv4Forwarding) {
 		this.ipv4Forwarding = ipv4Forwarding;
@@ -54,10 +142,10 @@ public class InterfaceConfiguration {
 	}
 
 	/**
-	 * Adds an ip to the list.
-	 * 
+	 * Adds an IP address to the list.
+	 *
 	 * @param ip the {@link Inet4AddressWithSubnetmask} to add
-	 * @return this
+	 * @return this instance for method chaining
 	 */
 	public InterfaceConfiguration addIp(Inet4AddressWithSubnetmask ip) {
 		this.ips.add(ip);
@@ -65,14 +153,12 @@ public class InterfaceConfiguration {
 	}
 
 	/**
-	 * Adds an ip to the list with using
+	 * Adds an IP address using
 	 * {@link Inet4AddressWithSubnetmask#fromString(String)}.
-	 * 
-	 * @param ip the {@link Inet4AddressWithSubnetmask} to add
-	 * @return this
-	 * @throws OpenemsException if
-	 *                          {@link Inet4AddressWithSubnetmask#fromString(String)}
-	 *                          throws an error
+	 *
+	 * @param ip the IP address string
+	 * @return this instance for method chaining
+	 * @throws OpenemsException if parsing fails
 	 */
 	public InterfaceConfiguration addIp(String ip) throws OpenemsException {
 		this.ips.add(Inet4AddressWithSubnetmask.fromString(ip));
@@ -80,15 +166,22 @@ public class InterfaceConfiguration {
 	}
 
 	/**
-	 * Adds an ip to the list with using
-	 * {@link Inet4AddressWithSubnetmask#fromString(String, String)}.
-	 * 
-	 * @param label the label with a length of 1..15 characters
-	 * @param ip    the {@link Inet4AddressWithSubnetmask} to add
-	 * @return this
-	 * @throws OpenemsException if
-	 *                          {@link Inet4AddressWithSubnetmask#fromString(String)}
-	 *                          throws an error
+	 * Adds a labeled IPv4 address using
+	 * {@link Inet4AddressWithSubnetmask#fromString(String, String)} to parse the
+	 * given IP address and subnet mask information.
+	 *
+	 * <p>
+	 * The label must contain between 1-15 characters. If the label length is
+	 * invalid or the IP address cannot be parsed, an exception will be thrown.
+	 * </p>
+	 *
+	 * @param label the identifier for this IP address; must be 1-15 characters long
+	 * @param ip    the IPv4 address string (including subnet mask if required by
+	 *              the parser)
+	 * @return this instance for method chaining
+	 * @throws OpenemsException         if the IP address cannot be parsed
+	 * @throws IllegalArgumentException if the label does not contain 1-15
+	 *                                  characters
 	 */
 	public InterfaceConfiguration addIp(String label, String ip) throws OpenemsException {
 		if (label.length() > 15) {
@@ -96,6 +189,34 @@ public class InterfaceConfiguration {
 		}
 		this.ips.add(Inet4AddressWithSubnetmask.fromString(label, ip));
 		return this;
+	}
+
+	public List<Routes> getRoutes() {
+		return this.routes;
+	}
+
+	public Boolean getDhcp() {
+		return this.dhcp;
+	}
+
+	public String getDns() {
+		return this.dns;
+	}
+
+	public int getDhcpRouteMetric() {
+		return this.dhcpRouteMetric;
+	}
+
+	public String getGateway() {
+		return this.gateway;
+	}
+
+	public Boolean getGatewayOnLink() {
+		return this.gatewayOnLink;
+	}
+
+	public Boolean getCreateIfNotExist() {
+		return this.createIfNotExist;
 	}
 
 	public List<Inet4AddressWithSubnetmask> getIps() {
@@ -132,17 +253,27 @@ public class InterfaceConfiguration {
 
 	@Override
 	public String toString() {
-		return "InterfaceConfiguration [interfaceName=" + this.interfaceName + ", ips="
-				+ this.ips.stream().map(Object::toString).collect(joining(", "))//
-				+ ", ipv4Forwarding=" + this.ipv4Forwarding //
-				+ ", ipMasquerade=" + this.ipMasquerade + "]";
+		return "InterfaceConfiguration ["//
+				+ "interfaceName=" + this.interfaceName//
+				+ ", ips=" + this.ips.stream().map(Object::toString).collect(joining(", "))//
+				+ ", ipv4Forwarding=" + this.ipv4Forwarding//
+				+ ", ipMasquerade=" + this.ipMasquerade//
+				+ ", dhcp=" + this.dhcp //
+				+ ", dns=" + this.dns //
+				+ ", dhcpRouteMetric=" + this.dhcpRouteMetric//
+				+ ", gateway=" + this.gateway //
+				+ ", gatewayOnLink=" + this.gatewayOnLink//
+				+ ", createIfNotExist=" + this.createIfNotExist//
+				+ ", routes=" + this.routes.stream().map(Object::toString).collect(joining(", "))//
+				+ "]";
 	}
 
 	/**
-	 * Summarizes the duplicated interfaces into one.
-	 * 
-	 * @param interfaceConfiguration the configurations to summarize
-	 * @return the interfaces
+	 * Combines multiple {@link InterfaceConfiguration} objects with the same
+	 * interface name into a single summarized configuration.
+	 *
+	 * @param interfaceConfiguration the list of configurations to summarize
+	 * @return a list of summarized {@link InterfaceConfiguration} objects
 	 */
 	public static List<InterfaceConfiguration> summarize(//
 			final List<InterfaceConfiguration> interfaceConfiguration //
@@ -155,17 +286,20 @@ public class InterfaceConfiguration {
 				t.add(u);
 				return;
 			}
+			t.removeAll(existingInterfaces);
 			var newInterface = new InterfaceConfiguration(u.interfaceName);
 			newInterface.getIps().addAll(existingInterfaces.stream() //
 					.flatMap(i -> i.getIps().stream()) //
-					.collect(Collectors.toList()));
+					.toList());
+			newInterface.getIps().addAll(u.getIps());
 
 			newInterface.setIpv4Forwarding(existingInterfaces.stream() //
 					.map(InterfaceConfiguration::getIpv4Forwarding) //
 					.filter(Objects::nonNull) //
 					.reduce((a, b) -> {
 						if (a != b) {
-							throw new RuntimeException("Ipv4 Forwarding got multiple values: " + a + " and " + b);
+							throw new RuntimeException(
+									"IPv4 Forwarding has multiple conflicting values: " + a + " and " + b);
 						}
 						return b;
 					}).orElse(null));
@@ -175,23 +309,38 @@ public class InterfaceConfiguration {
 					.filter(Objects::nonNull) //
 					.reduce((a, b) -> {
 						if (a != b) {
-							throw new RuntimeException("Ip Masquerade got multiple values: " + a + " and " + b);
+							throw new RuntimeException(
+									"IP Masquerade has multiple conflicting values: " + a + " and " + b);
 						}
 						return b;
 					}).orElse(null));
+
+			// Use the new values for DHCP, DNS, Route Metric, Gateway, and GatewayOnLink
+			newInterface.setDhcp(u.getDhcp());
+			newInterface.setDns(u.getDns());
+			newInterface.setDhcpRouteMetric(u.getDhcpRouteMetric());
+			newInterface.setGateway(u.getGateway());
+			newInterface.setGatewayOnLink(u.getGatewayOnLink());
+
+			newInterface.getRoutes().addAll(existingInterfaces.stream() //
+					.flatMap(i -> i.getRoutes().stream()) //
+					.toList());
+			newInterface.getRoutes().addAll(u.getRoutes());
+
+			t.add(newInterface);
 		};
 		return Objects.requireNonNull(interfaceConfiguration).stream() //
 				.collect(ArrayList::new, flatAdd, (t, u) -> {
-					u.stream().forEach(i -> flatAdd.accept(t, i));
+					u.forEach(i -> flatAdd.accept(t, i));
 				});
 	}
 
 	/**
-	 * Removes ip's from the {@code listToRemove} if the ip-address is in both
-	 * lists.
-	 * 
-	 * @param listToRemove the list to remove the ip's
-	 * @param other        the other interfaces
+	 * Removes duplicated IPs and settings from the first list that already exist in
+	 * the second list.
+	 *
+	 * @param listToRemove the list from which to remove duplicates
+	 * @param other        the reference list containing elements to remove
 	 */
 	public static void removeDuplicatedIps(//
 			final List<InterfaceConfiguration> listToRemove, //
@@ -201,28 +350,67 @@ public class InterfaceConfiguration {
 		Objects.requireNonNull(other);
 
 		for (var interfaceConfiguration : listToRemove) {
+			// Find interfaces with the same name in the other list
 			var otherInterfaces = other.stream() //
 					.filter(oi -> oi.interfaceName.equals(interfaceConfiguration.interfaceName)) //
-					.collect(Collectors.toList());
+					.toList();
 			if (otherInterfaces.isEmpty()) {
 				continue;
 			}
-			otherInterfaces.stream() //
-					.flatMap(t -> t.getIps().stream()) //
-					.forEach(interfaceConfiguration.getIps()::remove);
 
-			if (interfaceConfiguration.getIpv4Forwarding() != null) {
-				if (otherInterfaces.stream()
-						.anyMatch(t -> t.getIpv4Forwarding() == interfaceConfiguration.getIpv4Forwarding())) {
-					interfaceConfiguration.setIpv4Forwarding(null);
-				}
+			// Remove IP addresses that exist in both lists
+			var otherIps = otherInterfaces.stream() //
+					.flatMap(t -> t.getIps().stream()) //
+					.toList();
+			interfaceConfiguration.getIps().removeAll(otherIps);
+
+			// Clear IPv4 Forwarding if identical
+			if (interfaceConfiguration.getIpv4Forwarding() != null && otherInterfaces.stream()
+					.anyMatch(t -> Objects.equals(t.getIpv4Forwarding(), interfaceConfiguration.getIpv4Forwarding()))) {
+				interfaceConfiguration.setIpv4Forwarding(null);
 			}
-			if (interfaceConfiguration.getIpMasquerade() != null) {
-				if (otherInterfaces.stream()
-						.anyMatch(t -> t.getIpMasquerade() == interfaceConfiguration.getIpMasquerade())) {
-					interfaceConfiguration.setIpMasquerade(null);
-				}
+
+			// Clear IP Masquerade if identical
+			if (interfaceConfiguration.getIpMasquerade() != null && otherInterfaces.stream()
+					.anyMatch(t -> Objects.equals(t.getIpMasquerade(), interfaceConfiguration.getIpMasquerade()))) {
+				interfaceConfiguration.setIpMasquerade(null);
 			}
+
+			// Clear DHCP setting if identical
+			if (interfaceConfiguration.getDhcp() != null && otherInterfaces.stream()
+					.anyMatch(t -> Objects.equals(t.getDhcp(), interfaceConfiguration.getDhcp()))) {
+				interfaceConfiguration.setDhcp(null);
+			}
+
+			// Clear DNS setting if identical
+			if (interfaceConfiguration.getDns() != null && otherInterfaces.stream()
+					.anyMatch(t -> Objects.equals(t.getDns(), interfaceConfiguration.getDns()))) {
+				interfaceConfiguration.setDns(null);
+			}
+
+			// Reset DHCP Route Metric if identical
+			if (interfaceConfiguration.getDhcpRouteMetric() != 0 && otherInterfaces.stream()
+					.anyMatch(t -> t.getDhcpRouteMetric() == interfaceConfiguration.getDhcpRouteMetric())) {
+				interfaceConfiguration.setDhcpRouteMetric(0);
+			}
+
+			// Clear Gateway if identical
+			if (interfaceConfiguration.getGateway() != null && otherInterfaces.stream()
+					.anyMatch(t -> Objects.equals(t.getGateway(), interfaceConfiguration.getGateway()))) {
+				interfaceConfiguration.setGateway(null);
+			}
+
+			// Clear GatewayOnLink if identical
+			if (interfaceConfiguration.getGatewayOnLink() != null && otherInterfaces.stream()
+					.anyMatch(t -> Objects.equals(t.getGatewayOnLink(), interfaceConfiguration.getGatewayOnLink()))) {
+				interfaceConfiguration.setGatewayOnLink(null);
+			}
+
+			// Remove routes that exist in both lists
+			var otherRoutes = otherInterfaces.stream() //
+					.flatMap(t -> t.getRoutes().stream()) //
+					.toList();
+			interfaceConfiguration.getRoutes().removeAll(otherRoutes);
 		}
 	}
 
